k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: heavenly
  labels:
    name: heavenly
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
